fixed css issues on mobile.

--- a/src/components/AddPlayerForm/AddPlayerForm.css
+++ b/src/components/AddPlayerForm/AddPlayerForm.css
@@ -21,10 +21,13 @@
 label > input{ 
     visibility: hidden; 
     position: absolute; 
+    
   }
   label > input + img{ 
     cursor:pointer;
     border: 3px solid transparent;
+    transition: all 0.2s;
+    border-radius: 50%;
   }
   label > input:checked + img{ 
     border:3px solid #86429E;
