--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,14 +1,17 @@
 nav {
+    height: 65px;
+    line-height: 65px;
     background-color: #EE6E5D;
 }
 
-.nav-desktop {
-    display: none;    
+.main-nav {
+    display: flex;    
 }
 
 .nav-mobile {
-    display: block;
-    grid-column: 1/4;
+    height: 45px;
+    line-height: 45px;
+    background-color: #86429E;
 }
 
 .nav-ul {
@@ -18,6 +21,7 @@ nav {
 
 .nav-ul li {
     flex-grow: 1;
+    text-align: center;
 }
 
 .nav-ul a {
@@ -48,11 +52,7 @@ nav {
     left: 15px;
 }
 
-@media (min-width: 768px){
-    .nav-desktop {
-        display: flex;
-    }
-
+@media (min-width: 850px){
     .nav-mobile {
         display: none;
     }
