--- a/src/components/PlayerList/PlayerList.css
+++ b/src/components/PlayerList/PlayerList.css
@@ -41,11 +41,15 @@
     transition: 700ms cubic-bezier(0.38,-0.43, 0.59, 1.44);
   }
   
-  .player-ani-leave {
-  }
-  
   .player-ani-leave.player-ani-leave-active {
-    -webkit-transform: translateX(120%);
-    transform: translateX(120%);
+    -webkit-transform: translateX(250%);
+    transform: translateX(250%);
     transition: 700ms cubic-bezier(0.38,-0.43, 0.59, 1.44);
+  }
+
+  @media (max-width: 850px) {
+      .PlayerList ul {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+      }
   }
