--- a/src/components/Streak/Streak.css
+++ b/src/components/Streak/Streak.css
@@ -13,7 +13,7 @@
     width: 12em;
     height: 9em;
     position: absolute;
-    right: 25px;
+    right: 5px;
   }
 
   .streak-count {
